Simplify site design: remove colors, update blog posts layout

--- a/_includes/post-footer.html
+++ b/_includes/post-footer.html
@@ -1,9 +1,9 @@
 <footer class="post-footer">
 	<div class="page-width">
-		<div class="medium-10 large-8 medium-centered">
+		<div class="medium-10 large-8">
 			<a href="{{ site.baseurl }}">
 				<div class="post-footer-content">
-					<img src="{{ site.baseurl }}/img/icons/mailbox.jpg" alt="Paskatkaste">
+					<span>&larr;</span> Atpakaļ pie vēstulēm
 				</div> <!-- ooter content -->
 			</a>
 		</div>
