--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,7 +2,7 @@
 {% include site-header.html %}
 <article class="post">
 	<div class="page-width">
-		<div class="medium-10 large-8 medium-centered">
+		<div class="medium-10 large-8">
 {% include post-header.html %}
 		</div>
 	</div> <!-- Page width -->
