--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,7 +9,7 @@
 -->
 
 	<meta charset="UTF-8" />
-	<title>{% if page.title %} {{ page.title }} | {% endif %} Mārtiņš Mihailovs</title>
+	<title>{% if page.title %} {{ page.title | strip_html }} | {% endif %} Mārtiņš Mihailovs</title>
 	<meta name="description" content="{% if page.description %} {{ page.description }} {% elsif page.excerpt %} {{ page.excerpt | stript_html }} {% endif %}}" />
 	<meta name="keywords" content="{{ page.tags | join: ', ' }}" />
 	<meta name="author" content="Martins Mihailovs" />
@@ -33,13 +33,12 @@
 	
 	<!-- Fonts-->
 	<link href='http://fonts.googleapis.com/css?family=Lora:400,400italic,700&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
-	<link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,900,300&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
-	<link href='http://fonts.googleapis.com/css?family=Playfair+Display&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
-	
+	<link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600,900,300&subset=latin,latin-ext' rel='stylesheet' type='text/css'>		
 	<!-- Scripts-->
 	<script src="{{ site.baseurl }}/js/lib/jquery-1.10.2.min.js"></script>
 	<script src="{{ site.baseurl }}/js/responsive-nav.js"></script>
 	<script src="{{ site.baseurl }}/js/jquery.fitvids.js"></script>
+	<script src="{{ site.baseurl }}/js/scripts.js"></script>
 	<!--Emulates CSS3 pseudo-classes and attribute selectors in Internet Explorer 6-8-->
 	<!--[if (gte IE 6)&(lte IE 9)]>
 	<script type="text/javascript" src="js/lib/selectivizr-min.js"></script>
