--- a/_includes/site-header.html
+++ b/_includes/site-header.html
@@ -2,13 +2,14 @@
 	<div class="page-width bio-bg-img">
 		<div class="small-12">
 {% endif %}
-	<header class="site-head {% if page.url == "/bio/" %}site-head-bio {% elsif page.layout == "post" %}site-head-beta {% endif %} cfix">
+	<header class="site-head {% if page.url == "/bio/" %}site-head-bio {% endif %} cfix">
 		<div class="page-width">
 			<div class="small-12">
 				<div class="site-head-content cfix">
 					<a href="{{ site.baseurl }}" class="site-logo" title="Atgriezties galvenajā lapā">
 						<img src="{{ site.baseurl }}/img/martins-logo.jpg" alt="Mārtiņš Mihailovs" class="martins-logo">
 					</a>
+					<h1 class="page-title">{% if page.layout == "post" %}Vēstules{% else %}{{ page.title }}{% endif %}</h1>
 					<nav class="nav-primary">
 						<h3 class="nav-trigger"><span>Menu</span></h3>
 						<ul class="nav-list">
