--- a/_includes/site-header.html
+++ b/_includes/site-header.html
@@ -6,9 +6,7 @@
 		<div class="page-width">
 			<div class="small-12">
 				<div class="site-head-content cfix">
-					<a href="{{ site.baseurl }}" class="site-logo" title="Atgriezties galvenajā lapā">
-						<img src="{{ site.baseurl }}/img/martins-logo.jpg" alt="Mārtiņš Mihailovs" class="martins-logo">
-					</a>
+					<a href="/" class="site-logo sprite" title="Atgriezties galvenajā lapā"></a>
 					<h1 class="page-title">{% if page.layout == "post" %}Vēstules{% else %}{{ page.title }}{% endif %}</h1>
 					<nav class="nav-primary">
 						<h3 class="nav-trigger"><span>Menu</span></h3>
