--- a/_includes/post-footer.html
+++ b/_includes/post-footer.html
@@ -1,7 +1,7 @@
 <footer class="post-footer">
 	<div class="page-width">
 		<div class="medium-10 large-8">
-			<a href="{{ site.baseurl }}">
+			<a href="/">
 				<div class="post-footer-content">
 					<span>&larr;</span> Atpakaļ pie vēstulēm
 				</div> <!-- ooter content -->
