--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,7 +9,7 @@
 -->
 
 	<meta charset="UTF-8" />
-	<title>{% if page.title %}{{ page.title | strip_html }} | {% endif %}{{site.owner.name}}</title>
+	<title>{% if page.title %}{{ page.title | strip_html }}{% endif %}{% if page.layout != "post" %} | {{site.owner.name}}{% endif %}</title>
 	<meta name="description" content="{% if page.description %}{{ page.description }}{% elsif page.excerpt %}{{ page.excerpt | stript_html }}{% endif %}"/>
 	<meta name="keywords" content="{{ page.tags | join: ', ' }}"/>
 	<meta name="author" content="{{site.owner.name}}"/>
