Make h3 bigger - 20px

--- a/css/style.css
+++ b/css/style.css
@@ -69,7 +69,7 @@ h2, .h2{
 }
 
 h3, .h3 {
-	font-size: 1em; /*19/19*/
+	font-size: 1.0526em; /*19/19*/
 	font-weight: normal;
 	letter-spacing: 3.5px;
 	text-transform: uppercase;
@@ -1581,6 +1581,14 @@ p:target {
 	line-height: 1.3;
 	color: #868686;
 }
+
+/* ==========================================================================
+
+   Single portfolio
+   
+   ========================================================================== */
+
+
 
 
 /* ==========================================================================
