--- a/css/style.css
+++ b/css/style.css
@@ -12,8 +12,8 @@
 
 body { 
 	margin: 0 auto;
-	color: #2b2b2b;
-	font: normal 400 19px/1.6842105263157895 Lora, Georgia, serif; /* Magic number: 1.6842105263157895em or 32; all line heights and margin bottoms have to be a multiples of 32px */
+	color: #505050;
+	font: normal 400 18px/1.8333 Lora, Georgia, serif; /* Magic number: 1.6842105263157895em or 32; all line heights and margin bottoms have to be a multiples of 32px */
 	background: #fff;
 	-moz-osx-font-smoothing: grayscale;
 	text-rendering: optimizelegibility;
@@ -41,8 +41,9 @@ hr {
 
 /*
   Primary: #c6870a;
-  Base text: #2b2b2b;
-  Dimmed base text: #636363;
+  Dark grey accents: #2b2b2b;
+  Base text: #505050;
+  Dimmed base text: #6d6d6d;
   Light text: #868686;
   Dividers: #e6e6e6;
 */
@@ -65,14 +66,18 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 h2, .h2{
-	font-size: 1.3684em; /*26/19*/
+	font-size: 1.3333em; /*24/18*/
+	line-height: 1.2;
+}
+
+@media (min-width: 600px) {
+	h2, .h2{
+		font-size: 1.4444em; /*26/18*/
+	}
 }
 
 h3, .h3 {
-	font-size: 1.0526em; /*19/19*/
-	font-weight: normal;
-	letter-spacing: 3.5px;
-	text-transform: uppercase;
+	font-size: 1.1111em; /*20/18*/
 }
 
 
@@ -127,7 +132,7 @@ mark {
    ========================================================================== */
 
 a {
-	color: #2b2b2b;
+	color: #505050;
 	text-decoration: none;
 	border-bottom-width: 1px;
 	border-bottom-style: solid;
@@ -139,7 +144,7 @@ a {
 }
 
 .post-entry a {
-	border-bottom: 1px solid #2b2b2b;
+	border-bottom: 1px solid #505050;
 }
 
 .post-entry figure > a {
@@ -148,8 +153,7 @@ a {
 
 
 a:hover {
-	border-bottom-color: #2b2b2b;
-
+	border-bottom-color: #505050;
 }
 
 
@@ -190,15 +194,15 @@ figure {
 }
 
 figcaption {
-	font-size: .8421em; /* 17/19 */
+	font-size: .8888em; /* 17/19 */
 	margin-top: .2em;
-	color: #636363;
+	color: #6d6d6d;
 	letter-spacing: -.25px;
 	line-height: 1.45;
 }
 
 .post-entry figcaption a {
-	color: #636363;
+	color: #6d6d6d;
 	border-color: #7d7d7d;
 }
 
@@ -291,7 +295,6 @@ iframe {
 
 .post-entry ul, .post-entry ol {
 	margin-bottom: 1.5em;
-	line-height: 1.6;
 }
 
 .post-entry p+ul, .post-entry p+ol {
@@ -307,7 +310,11 @@ iframe {
 }
 
 .post-entry ul>li, .post-entry ol>li {
-	margin-bottom: .6em;
+	margin-bottom: .8em;
+}
+
+.post-entry .list-small>li, .post-entry .list-small>li {
+	margin-bottom: .4em;
 }
 
 .post-entry .list-img-grid {
@@ -883,25 +890,25 @@ iframe {
 
 html { 
 	-webkit-overflow-scrolling: touch; 
-	/* -webkit-tap-highlight-color: #2b2b2b; */
+	/* -webkit-tap-highlight-color: #505050; */
 	-webkit-text-size-adjust: 100%; 
 	-ms-text-size-adjust: 100%;
 }
 
 ::-webkit-selection { 
-	background: #2b2b2b; 
+	background: #505050; 
 	color: #fff; 
 	text-shadow: none;
 }
 
 ::-moz-selection { 
-	background: #2b2b2b; 
+	background: #505050; 
 	color: #fff; 
 	text-shadow: none;
 }
 
 ::selection { 
-	background: #2b2b2b; 
+	background: #505050; 
 	color: #fff; 
 	text-shadow: none;
 }
@@ -914,7 +921,7 @@ input[type="submit"] {
 }
 
 ::-webkit-input-placeholder {
-	color: #636363;
+	color: #6d6d6d;
 	line-height: 1.4;
 }
 
@@ -962,20 +969,32 @@ p {
 
 .site-head {
 	margin-top: 1.5em;
-	margin-bottom: 1.9em;
+	margin-bottom: 2.5em;
+}
+
+@media (min-width: 500px) {
+	.site-head {
+		margin-bottom: 3.5em;
+	}
 }
 
 @media (min-width: 600px) {
 	.site-head {
 		margin-top: 2.5em;
-		margin-bottom: 3em;
+		margin-bottom: 4em;
 	}
 }
 
 @media (min-width: 900px) {
 	.site-head {
-		margin-top: 4em;
+		margin-top: 3.5em;
 		margin-bottom: 5em;
+	}
+}
+
+@media (min-width: 1200px) {
+	.site-head {
+		margin-bottom: 6em;
 	}
 }
 
@@ -1001,8 +1020,8 @@ p {
 	display: block;
 	border: none;
 	z-index: 2;
-	width: 154px;
-	height: 68px;
+	width: 160px;
+	height: 69px;
 	-webkit-transition: none;
 	-moz-transition: none;
 	-o-transition: none;
@@ -1034,6 +1053,13 @@ p {
 
 .site-head-content {
 	position: relative;
+	border-bottom: 1px solid #e6e6e6;
+}
+
+@media (min-width: 600px) {
+	.site-head-content {
+		border-bottom: none;
+	}
 }
 
 .site-logo:hover {
@@ -1045,81 +1071,60 @@ p {
 }
 
 .nav-primary {
-	font-family: 'Source Sans Pro', sans-serif;
-	font-weight: 400;
+	font-size: .8333em;
+	letter-spacing: 2px;
+	text-transform: uppercase;
+}
+
+@media (min-width: 600px) {
+	.nav-primary {
+		font-size: .7777em;
+	}
 }
 
 .nav-trigger {
 	position: absolute;
-	top: 2em;
+	top: 1.2em;
 	right: 0;
-	z-index: 20;
-	text-transform: uppercase;
-	font-size: 1.0526315789473684em;
-	font-weight: 400;
 	cursor: pointer;
-	letter-spacing: -1px;
-	color: #e6e6e6;
-	text-align: right;
 	background-image: url("../img/icons/navicon-primary.gif");
 	background-repeat: no-repeat;
 	background-position: right 1px;
 	padding-right: 1.5em;
 	line-height: 1;
 	height: 1.5em;
-	-moz-osx-font-smoothing: auto;
 }
 
 @media (min-width: 600px) {
 	.nav-trigger {
-		top: 1.6em;
-		background-image: url("../img/icons/navicon-secondary.gif");
+		display: none;
 	}
+}
 
+@media (min-width: 600px) {
 	.site-head-beta .nav-trigger {
 		top: 3em;
 	}
 }
 
-.expanded .nav-trigger {
+.nav-trigger-active {
 	background-image: url("../img/icons/navicon-primary-close.gif");
 }
 
-@media (min-width: 600px) {
-	.expanded .nav-trigger {
-		background-image: url("../img/icons/navicon-secondary-close.gif");
-	}
-}
-
-.nav-trigger span {
-	display: none;
-}
-
-@media (min-width: 600px) {
-	.nav-trigger span {
-		display: inline;
-	}
-}
-
 .nav-list {
-	font-size: 1.1578em; /*22/19*/
-	font-weight: 400;
 	text-align: center;
-	line-height: 2em;
 }
 
 @media (min-width: 600px) {
 	.nav-list {
-		position: absolute;
-		right: 0;
-		top: 3.5em;
-		z-index: 10;
-		padding-top: .5em;
-		border-top: none;
+		position: relative;
+		top: -.9em;
+		padding-top: .3em;
+		border-top: 1px solid #e6e6e6;
 		font-size: 1em;
-		text-align: right;
-		line-height: 1.5em;
-		width: 11.5789em;
+		text-align: left;
+		line-height: 1.3em;
+		width: 19em;
 	}
 
 	.site-head-beta .nav-list {
@@ -1128,7 +1133,7 @@ p {
 }
 
 .nav-list > li {
-	border-bottom: 1px solid #e6e6e6;
+	border-top: 1px solid #e6e6e6;
 }
 
 @media (min-width: 600px) {
@@ -1136,8 +1141,8 @@ p {
 		display: inline-block;
 		*display: inline;
 		zoom: 1;
-		border-bottom: none;
-		margin-right: .5em;
+		border-top: none;
+		margin-right: .4em;
 	}
 
 	.nav-list > li:last-child {
@@ -1145,25 +1150,14 @@ p {
 	}
 }
 
-.nav-list > li:first-child {
-	border-top: 1px solid #e6e6e6;
-}
-
-@media (min-width: 600px) {
-	.nav-list > li:first-child {
-		border-top: none;
-	}
-}
-
 .nav-list a {
 	display: block;
-	color: #636363;
+	color: #6d6d6d;
+	padding: .5em 0 .4em;
 }
 
 .nav-list a:hover {
-	border-bottom-width: 1px;
-	border-bottom-style: solid;
-	border-bottom-color: #2b2b2b;
+	border-bottom-color: #505050;
 }
 
 @media (min-width: 600px) {
@@ -1173,33 +1167,38 @@ p {
 		zoom: 1;
 		color: #868686;
 	}
+
+	.nav-list a:hover {
+		border-bottom-color: transparent;
+		color: #2b2b2b;
+	}
 }
 
 .nav-list .nav-current {
 	color: #2b2b2b;
-	font-weight: 600;
+	font-weight: bold;
 }
 
-.responsive-nav li {
+@media (min-width: 600px) {
+.nav-list .nav-current {
+		font-weight: normal;
+	}
+}
+
+/*Responsive nav*/
+
+.responsive-nav .nav-list {
 	display: none;
 }
 
 @media (min-width: 600px) {
-	.expanded .nav-list {
-	    border-top: 1px solid #E6E6E6;
+	.responsive-nav .nav-list {
+		display: block;
 	}
 }
 
-.expanded li {
-   display: list-item;
-}
-
-@media (min-width: 600px) {
-	.expanded li {
-	   display: inline-block;
-	   *display: inline;
-		zoom: 1;
-	}
+.responsive-nav .nav-list-open {
+	display: block;
 }
 
 
@@ -1259,7 +1258,7 @@ p {
 }
 
 .page-desc {
-	color: #2b2b2b;
+	color: #505050;
 }
 
 .page-desc-heading {
@@ -1278,6 +1277,12 @@ p {
 }
 
 @media (min-width: 500px) {
+	.post-header {
+		margin-bottom: 1.5em;
+	}
+}
+
+@media (min-width: 600px) {
 	.post-header {
 		margin-bottom: 2em;
 	}
@@ -1300,37 +1305,39 @@ p {
  }
 
  .post-title {
- 	margin-bottom: .2em;
-	font-size: 1.6em; 
+ 	margin-bottom: .1em;
+	font-size: 1.6666em; 
 	line-height: 1.1;
 	font-weight: 400;
+	color: #2b2b2b;
 }
 
 @media (min-width: 400px) {
 	.post-title {
-		font-size: 1.9em;
+		font-size: 1.8888em;
 		line-height: 1;
+		margin-bottom: .2em;
 	}
 }
 
 @media (min-width: 500px) {
 	.post-title {
-		font-size: 2.4em;
-		letter-spacing: -1px;
+		font-size: 2.3888em;
+		line-height: 1.05;
 	}
 }
 
 @media (min-width: 700px) {
 	.post-title {
-		font-size: 2.8947em;
-		line-height: .95;
+		font-size: 2.8888em;
+		line-height: 1;
 	}
 }
 
 @media (min-width: 900px) {
 	.post-title {
 		margin-bottom: .3em;
-		font-size: 3.1578em;
+		font-size: 3em;
 	}
 }
 
@@ -1339,9 +1346,23 @@ p {
 }
 
 .post-pubdate {
-	font-size: .8947em;
-	color: #636363;
-	letter-spacing: 5px;
+	font-size: .7777em;
+	color: #868686;
+	letter-spacing: 3px;
+	text-transform: uppercase;
+}
+
+@media (min-width: 600px) {
+	.post-pubdate {
+		font-size: .8333em;
+		color: #868686;
+		letter-spacing: 3px;
+		text-transform: uppercase;
+	}
+}
+
+.archive-item .post-pubdate {
+	letter-spacing: 4px;
 }
 
 .post-entry {
@@ -1364,7 +1385,6 @@ p {
 
 .post-entry h3 {
 	margin-bottom: .9em;
-	line-height: 1.6;
 }
 
 .post-entry p+h2 {
@@ -1376,27 +1396,27 @@ p {
 }
 
 .post-footnotes {
-	font-size: 16px;
+	font-size: .8888em;
 	color: #868686;
-	margin-top: 30px;
+	margin-top: 2.5em;
 }
 
 .post-footnotes:before {
 	content: "";
 	display: block;
-	width: 40px;
+	width: 2.2222em;
 	border-top: 3px solid #e6e6e6;
-	margin-bottom: 10px;
+	margin-bottom: .5555em;
 }
 
 .post-footnotes span {
 	display: block;
 	font-weight: 600;
-	margin-bottom: 5px;
+	margin-bottom: .2777em;
 }
 
 .post-footnotes p {
-	margin-bottom: 5px;
+	margin-bottom: .2777em;
 	line-height: 1.3;
 }
 
@@ -1452,7 +1472,7 @@ p:target {
 }
 
 .post-entry blockquote > p {
-	font-size: 1.1578em;
+	font-size: 1.2222em;
 	line-height: 1.5;
 	margin-bottom: 0;
 }
@@ -1466,14 +1486,14 @@ p:target {
 
 @media (min-width: 900px) {
 	.post-entry blockquote > p {
-		font-size: 1.2631em;
+		font-size: 1.3333em;
 		padding-left: 30px;
 	}
 }
 
 .post-entry blockquote cite {
-	font-size: .8947em;
-	color: #636363;
+	font-size: .8888em;
+	color: #6d6d6d;
 	font-style: normal;
 }
 
@@ -1536,27 +1556,26 @@ p:target {
 }
 
 .archive-item-title {
-	font-size: 1.2631em;
+	font-size: 1.2222em;
     margin-bottom: .5384em;
 }
 
 @media (min-width: 600px) {
 	.archive-item-title {
-		font-size: 1.3684em;
+		font-size: 1.3333em;
 	}
+}
+
+.archive-item-title > a {
+	color: #2b2b2b;
 }
 
 .archive-item-snippet {
 	margin-bottom: .6em;
-}
-
-.archive-item-snippet {
-    line-height: 1.5789;
-    color: #636363;
+    line-height: 1.6111;
 }
 
 .archive-item-snippet > a {
-	color: #636363;
 	border: none;
 }
 
@@ -1602,12 +1621,17 @@ p:target {
 }
 
 .portfolio-item-title {
-	font-size: .9473em;
+	font-size: 1em;
 	font-weight: 400;
+	margin-bottom: .05em;
+}
+
+.portfolio-item-title a {
+	color: #2b2b2b;
 }
 
 .portfolio-item-tags {
-	font-size: 0.8421em;
+	font-size: 0.8888em;
 	line-height: 1.3;
 	color: #868686;
 }
@@ -1673,7 +1697,7 @@ p:target {
 .project-title {
 	font-family: "Source sans pro", Arial, sans-serif;
 	font-weight: 900;
-	font-size: 1.7894em;
+	font-size: 2em;
 	letter-spacing: -.04em;
 	line-height: .85;
 	margin-bottom: .4em;
@@ -1681,61 +1705,43 @@ p:target {
 
 @media (min-width: 500px) {
 	.project-title {
-		font-size: 2.1052em;
+		font-size: 2.3333em;
 		margin-bottom: .3em;
 	}
 }
 
 @media (min-width: 700px) {
 	.project-title {
-		font-size: 2.6315em;
-		margin-bottom: .25em;
-	}
-}
-
-@media (min-width: 900px) {
-	.project-title {
-		font-size: 3.1578em;
-		margin-bottom: .2em;
+		font-size: 3.1111em;
 		letter-spacing: -.045em;
+		margin-bottom: .3em;
 	}
 }
 
 @media (min-width: 1200px) {
 	.project-title {
-		font-size: 3.5789em;
-		margin-bottom: .17em;
+		font-size: 3.5555em;
+		margin-bottom: .2em;
 	}
 }
 
 .project .project-subtitle {
 	font-weight: 400;
-	font-size: 1.0526em;
-	line-height: 1.1;
+	font-size: 1em;
+	line-height: 1.3;
 	margin-bottom: 1em;
+	letter-spacing: 2px;
 }
 
 @media (min-width: 500px) {
 	.project .project-subtitle {
-		font-size: 1.1578em;
-	}
-}
-
-@media (min-width: 700px) {
-	.project .project-subtitle {
-		font-size: 1.2631em;
+		font-size: 1.1111em;
 	}
 }
 
 @media (min-width: 900px) {
 	.project .project-subtitle {
-		font-size: 1.3684em;
-	}
-}
-
-@media (min-width: 1200px) {
-	.project .project-subtitle {
-		font-size: 1.4736em;
+		font-size: 1.2222em;
 	}
 }
 
@@ -1743,19 +1749,19 @@ p:target {
 	font-style: normal;
 	text-transform: uppercase;
 	letter-spacing: 2.5px;
-	font-size: .8421em;
+	font-size: .8333em;
 
 }
 
 @media (min-width: 700px) {
 	.project-link {
-		font-size: .8947em;
+		font-size: .8888em;
 	}
 }
 
 @media (min-width: 900px) {
 	.project-link {
-		font-size: .9473em;
+		font-size: .9444em;
 	}
 }
 
@@ -1794,28 +1800,36 @@ p:target {
 }
 
 .project h2, .project .h2{
-	font-size: 1.1578em; /*24/19*/
+	font-size: 1.1111em;
+	line-height: 1.4;
 	text-transform: uppercase;
 	font-weight: normal;
-	letter-spacing: 3px;
+	letter-spacing: 2.5px;
 	margin-bottom: 1em;
 }
 
-@media (min-width: 900px) {
+@media (min-width: 600px) {
 	.project h2, .project .h2{
-		font-size: 1.2631em; /*24/19*/
+		font-size: 1.2222em;
 	}
 }
 
 .project .h2-2 {
-	font-size: 1.2631em; /*24/19*/
+	font-size: 1.2777em;
+	line-height: 1.3;
 	text-transform: none;
 	letter-spacing: 0;
 	margin-bottom: .8em;
 }
 
+@media (min-width: 600px) {
+	.project .h2-2 {
+		font-size: 1.3333em;
+	}
+}
+
 .project h3, .project  .h3{
-	font-size: 1em; /*24/19*/
+	font-size: 1em;
 	line-height: 1.5;
 	text-transform: none;
 	letter-spacing: 0;
@@ -1888,7 +1902,7 @@ p:target {
 .project .col-list-heading {
 	text-transform: uppercase;
 	font-weight: 600;
-	font-size: 1.0526em;
+	font-size: 1.1111em;
 	line-height: 1.35;
 	margin-bottom: .7em;
 }
@@ -1907,7 +1921,7 @@ p:target {
 }
 
 .section-test {
-	background: #2b2b2b;
+	background: #505050;
 	color: #fff;
 	border-bottom: 8px solid #ffc820;
 }
@@ -2021,18 +2035,18 @@ p:target {
 }
 
 .bio-name {
-	font-size: 1.0526em;
+	font-size: 1em;
 }
 
 @media (min-width: 350px) {
 	.bio-name {
-		font-size: 1.1578em;
+		font-size: 1.1111em;
 	}
 }
 
 .bio-occupation {
-	font-size: .8421em;
-	color: #636363;
+	font-size: .8888em;
+	color: #6d6d6d;
 	margin-top: .2em;
 }
 
