Update post/project footer: add bio info to posts footers

--- a/_includes/project-footer.html
+++ b/_includes/project-footer.html
@@ -1,4 +1,4 @@
-<footer class="post-footer">
+<footer class="project-footer">
 	<div class="page-width">
 		<div class="medium-10 large-8">
 			<a href="/portfolio">
