--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -20,5 +20,6 @@
 			{% endif %}
 		</header>
 		{{ content }}
+			{% include project-footer.html %}
 	</article> <!-- Project -->
 {% include foot.html %}
