--- a/_includes/post-footer.html
+++ b/_includes/post-footer.html
@@ -1,11 +1,11 @@
 <footer class="post-footer">
 	<div class="page-width">
-		<div class="medium-10 large-8">
-			<a href="/">
-				<div class="post-footer-content">
-					<span>&larr;</span> Atpakaļ pie vēstulēm
-				</div> <!-- ooter content -->
-			</a>
+		<div class="post-footer-content">
+			<div class="medium-10 large-6">
+				<img class="post-footer-avatar" src="/img/martins-mihailovs-sm.png" alt="Mārtiņš Mihailovs avatars">
+				<h4>Par autoru</h4>
+				<p>Mans vārds ir Mārtiņš Mihailovs. Esmu 26 gadus vecs grafikas dizainers / web izstrādātājs no Rīgas. Mani aizrauj dizains, kods, stāsti un fotogrāfija. Mēģinu ar to aizraut arī citus. Ja Tev patīk tas, ko redzi, dod man zināt: <a href="mailto:m.mihailovs@gmail.com?Subject=Mārtiņ,%20man%20patīk%20tas,%20ko%20redzu">m.mihailovs@gmail.com</a></p>
+			</div>
 		</div>
 	</div> <!-- Page width -->
 </footer>
