--- a/_includes/head.html
+++ b/_includes/head.html
@@ -65,7 +65,11 @@
 	<link rel="apple-touch-icon" sizes="114x114" href="{{ site.baseurl }}/images/favicons/apple-touch-icon-114x114.png">
 
 </head>
-<body> 
+{% if page.layout == "project" %}
+<body class="project project-{{ page.title | replace: '.', '-' }}">
+{% else %}
+<body>
+{% endif %} 
 	<!--[if lt IE 7]>
 		<p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
 	<![endif]-->	
