--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -1,8 +1,8 @@
 {% include head.html %}
-	<article class="project project-{{ page.title | replace: '.', '-' }}">
+{% include site-header.html %}
+	<article>
 		<header class="project-header">
-			{% if page.cover %}
-			<div class="featured-image" style="background-image: url({{ site.baseurl }}/img/portfolio/{{ page.cover }})">
+			<div class="featured-image">
 				<div class="page-width">
 					<div class="small-12">
 						<div class="project-info">
@@ -15,9 +15,6 @@
 					</div>
 				</div>
 			</div>
-			{% else %}
-			<div class="featured-image"></div>
-			{% endif %}
 		</header>
 		{{ content }}
 			{% include project-footer.html %}
