--- a/css/style.css
+++ b/css/style.css
@@ -968,8 +968,8 @@ p {
    ========================================================================== */
 
 .site-head {
-	margin-top: 1.5em;
-	margin-bottom: 2.5em;
+	margin-top: .8em;
+	margin-bottom: 3em;
 }
 
 @media (min-width: 500px) {
@@ -998,19 +998,19 @@ p {
 	}
 }
 
-.site-head-beta {
-	margin-bottom: 0;
+.project .site-head {
+	margin-bottom: .3em;
+}
+
+.project .site-head-content {
+	border-bottom: none;
 }
 
 @media (min-width: 600px) {
-	.site-head-beta {
-		margin-top: 0;
-	}
-}
-
-@media (min-width: 600px) {
-	.site-head-beta .site-logo {
-		display: none;
+	.project .site-head {
+		position: absolute;
+		width: 100%;
+		z-index: 10;
 	}
 }
 
@@ -1020,16 +1020,27 @@ p {
 	display: block;
 	border: none;
 	z-index: 2;
-	width: 160px;
-	height: 69px;
+	width: 125px;
+	height: 54px;
+	background-position: 0 0;
 	-webkit-transition: none;
 	-moz-transition: none;
 	-o-transition: none;
 	transition: none;
 }
 
-.site-logo:hover {
-	background-position: 0 -69px;
+@media (min-width: 600px) {
+	.site-logo {
+		width: 160px;
+		height: 69px;
+		background-position: 0 -54px;
+	}
+}
+
+@media (min-width: 600px) {
+	.site-head-white .site-logo {
+		background-position: 0 -123px;
+	}
 }
 
 .page-title {
@@ -1084,7 +1095,7 @@ p {
 
 .nav-trigger {
 	position: absolute;
-	top: 1.2em;
+	top: .9em;
 	right: 0;
 	cursor: pointer;
 	background-image: url("../img/icons/navicon-primary.gif");
@@ -1098,12 +1109,6 @@ p {
 @media (min-width: 600px) {
 	.nav-trigger {
 		display: none;
-	}
-}
-
-@media (min-width: 600px) {
-	.site-head-beta .nav-trigger {
-		top: 3em;
 	}
 }
 
@@ -1126,9 +1131,11 @@ p {
 		line-height: 1.3em;
 		width: 19em;
 	}
+}
 
-	.site-head-beta .nav-list {
-		top: 5em;
+@media (min-width: 600px) {
+	.site-head-dark .nav-list {
+		border-top-color: #2b2b2b;
 	}
 }
 
@@ -1156,6 +1163,19 @@ p {
 	padding: .5em 0 .4em;
 }
 
+@media (min-width: 600px) {
+	.site-head-dark .nav-list a {
+		color: #2b2b2b;
+	}
+}
+
+@media (min-width: 600px) {
+	.site-head-white .nav-list a {
+		color: #fff;
+		opacity: .5;
+	}
+}
+
 .nav-list a:hover {
 	border-bottom-color: #505050;
 }
@@ -1172,6 +1192,15 @@ p {
 		border-bottom-color: transparent;
 		color: #2b2b2b;
 	}
+
+	.site-head-dark .nav-list a:hover {
+		opacity: .6;
+	}
+
+	.site-head-white .nav-list a:hover {
+		opacity: 1;
+		color: #fff;
+	}
 }
 
 .nav-list .nav-current {
@@ -1180,8 +1209,16 @@ p {
 }
 
 @media (min-width: 600px) {
-.nav-list .nav-current {
+	.nav-list .nav-current {
 		font-weight: normal;
+	}
+
+	.site-head-dark .nav-list .nav-current {
+		font-weight: bold;
+	}
+
+	.site-head-white .nav-list .nav-current {
+		opacity: 1;
 	}
 }
 
@@ -1680,7 +1717,7 @@ p:target {
    ========================================================================== */
 
  .project-header {
- 	margin-bottom: 1.5em;
+ 	margin-bottom: 2em;
  }
 
  @media (min-width: 500px) {
@@ -1703,31 +1740,63 @@ p:target {
 
 .featured-image {
 	position: relative;
-	height: 65vh;
-	min-height: 320px;
-	background-size: cover;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-position: center center;
+	background: #2b2b2b;
+	background-repeat: no-repeat;
+}
+
+@media (min-width: 600px) {
+	.featured-image {
+		position: relative;
+		height: 65vh;
+		min-height: 320px;
+		background: #2b2b2b;
+		background-repeat: no-repeat;
+	}
+}
+
+.project-heartlock-me .featured-image {
+	background-color: #256eb3;
+}
+
+@media (min-width: 600px) {
+	.project-heartlock-me .featured-image {
+		background-image: url("../img/portfolio/cover.jpg");
+		background-position: bottom center;
+		background-size: 95%;
+	}
+}
+
+@media (min-width: 900px) {
+	.project-heartlock-me .featured-image {
+		background-size: auto;
+	}
 }
 
 .project-info {
+	padding: 3.5em 0 3.1em;
 	color: #fff;
-	position: absolute;
-	bottom: 2em;
-	opacity: .9;
+	text-align: center;
+}
+
+@media (min-width: 600px) {
+	.project-info {
+		position: absolute;
+		bottom: 3.5em;
+		padding: 0;
+		text-align: left;
+	}
 }
 
 @media (min-width: 700px) {
 	.project-info {
-		bottom: 3em;
+		bottom: 4em;
+		text-shadow: 1px 1px 1px rgba(0,0,0,.3);
 	}
 }
 
 @media (min-width: 1200px) {
 	.project-info {
-		bottom: 4em;
+		bottom: 4.5em;
 	}
 }
 
@@ -1737,48 +1806,67 @@ p:target {
 	font-size: 2em;
 	letter-spacing: -.04em;
 	line-height: .85;
-	margin-bottom: .4em;
 }
 
 @media (min-width: 500px) {
 	.project-title {
 		font-size: 2.3333em;
-		margin-bottom: .3em;
 	}
 }
+
+@media (min-width: 600px) {
+	.project-title {
+		font-size: 2.7777em;
+	}
+}
+
 
 @media (min-width: 700px) {
 	.project-title {
 		font-size: 3.1111em;
 		letter-spacing: -.045em;
-		margin-bottom: .3em;
 	}
 }
 
 @media (min-width: 1200px) {
 	.project-title {
 		font-size: 3.5555em;
-		margin-bottom: .2em;
 	}
 }
 
 .project .project-subtitle {
+	font-family: "Source sans pro", Arial, sans-serif;
 	font-weight: 400;
-	font-size: 1em;
+	font-size: .9444em;
 	line-height: 1.3;
-	margin-bottom: 1em;
 	letter-spacing: 2px;
+	margin: 0;
+	margin-top: .6em;
 }
 
 @media (min-width: 500px) {
 	.project .project-subtitle {
-		font-size: 1.1111em;
+		margin-top: .75em;
+	}
+}
+
+@media (min-width: 700px) {
+	.project .project-subtitle {
+		font-size: 1em;
 	}
 }
 
 @media (min-width: 900px) {
 	.project .project-subtitle {
+		font-size: 1.1111em;
+		margin-top: .5em;
+	}
+}
+
+@media (min-width: 1200px) {
+	.project .project-subtitle {
 		font-size: 1.2222em;
+		margin-top: .4em;
 	}
 }
 
@@ -1786,19 +1874,21 @@ p:target {
 	font-style: normal;
 	text-transform: uppercase;
 	letter-spacing: 2.5px;
-	font-size: .8333em;
+	font-size: .7777em;
+	margin-top: 1em;
 
 }
 
-@media (min-width: 700px) {
+@media (min-width: 900px) {
 	.project-link {
-		font-size: .8888em;
+		margin-top: 1.3em;
+
 	}
 }
 
 @media (min-width: 900px) {
 	.project-link {
-		font-size: .9444em;
+		font-size: .8888em;
 	}
 }
 
@@ -1807,12 +1897,18 @@ p:target {
 	display: block;
 	width: 2.7em;
 	border-top: 1px solid #fff;
-	margin-bottom: .5em;
+	margin: 0 auto .8em;
 }
 
 @media (min-width: 500px) {
 	.project-link:before {
 		margin-bottom: .6em;
+	}
+}
+
+@media (min-width: 600px) {
+	.project-link:before {
+		margin: 0 0 .8em;
 	}
 }
 
