--- a/_includes/site-header.html
+++ b/_includes/site-header.html
@@ -7,12 +7,12 @@
 			<div class="small-12">
 				<div class="site-head-content cfix">
 					<a href="/" class="sprite site-logo" title="Atgriezties galvenajā lapā"></a>
-					<nav class="nav-primary">
+					<!-- <nav class="nav-primary">
 						<h3 class="nav-trigger"></h3>
 						<ul class="nav-list">{% assign url = page.url | remove:'index.html' %}{% for link in site.data.navigation %}
 							<li><a href="{{ site.baseurl }}{{ link.url }}" {% if url == link.url or page.layout == link.layout %}class="nav-current"{% endif %}>{{ link.text }}</a></li>{% endfor %}
 						</ul>
-					</nav>
+					</nav> -->
 				</div>
 			</div>
 		</div> <!-- Page width -->
