--- a/css/style.css
+++ b/css/style.css
@@ -319,7 +319,13 @@ iframe {
 
 .post-entry .list-img-grid {
 	margin-left: 0;
-	margin-top: .7em;
+	margin-top: 1em;
+}
+
+@media (min-width: 700px) {
+	.post-entry .list-img-grid {
+		margin-top: 1.5em;
+	}
 }
 
 .post-entry .checklist {
