--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@ body {
 	margin: 0 auto;
 	color: #505050;
 	font: normal 400 18px/1.8333 Lora, Georgia, serif; /* Magic number: 1.6842105263157895em or 32; all line heights and margin bottoms have to be a multiples of 32px */
-	background: #fff;
+	background: #fafafa;
 	-moz-osx-font-smoothing: grayscale;
 	text-rendering: optimizelegibility;
 }
