Change post-footer bg to white

--- a/css/style.css
+++ b/css/style.css
@@ -1574,7 +1574,7 @@ p:target {
 
 .post-footer {
 	font-family: "Source Sans pro", Arial, sans-serif;
-	background: #f7f7f7;
+	background: #fff;
 	padding: 3em 0;
 }
 
