--- a/css/style.css
+++ b/css/style.css
@@ -220,8 +220,9 @@ figcaption {
 @media (min-width: 400px) {
 	.figure-float-right, .figure-float-left {
 		width: 45%;
-		margin-top: .3em;
+		margin-top: .4em;
 		margin-bottom: 0;
+		clear: both;
 	}
 
 	.figure-float-right {
