--- a/css/style.css
+++ b/css/style.css
@@ -194,11 +194,11 @@ figure {
 }
 
 figcaption {
-	font-size: .8888em; /* 17/19 */
+	font-size: .7777em; /* 17/19 */
 	margin-top: .2em;
 	color: #6d6d6d;
 	letter-spacing: -.25px;
-	line-height: 1.45;
+	line-height: 1.43;
 }
 
 .post-entry figcaption a {
@@ -206,14 +206,15 @@ figcaption {
 	border-color: #7d7d7d;
 }
 
-@media (min-width: 900px) {
+@media (min-width: 1100px) {
 	.figcaption-on-right {
 		position: absolute;
 		top: 0;
-		right: -270px;
+		right: -230px;
 		text-align: left;
-		width: 250px;
+		width: 210px;
 		margin-top: -2px;
+		font-style: italic;
 	}
 }
 
