Add .small class

--- a/css/style.css
+++ b/css/style.css
@@ -125,6 +125,11 @@ mark {
 	background: #ff0;
 }
 
+.small {
+	font-size: .8333em;
+	line-height: 1.7;
+}
+
 /* ==========================================================================
 
    Links
