--- a/_includes/head.html
+++ b/_includes/head.html
@@ -30,6 +30,7 @@
 	<!-- CSS-->
 	<link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/css/reset.css" />
 	<link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/css/style.css" />
+	<link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/css/syntax.css" />
 
 	<!-- Fonts-->
 	<link href='http://fonts.googleapis.com/css?family=Lora:400,400italic,700&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
