--- a/css/style.css
+++ b/css/style.css
@@ -84,19 +84,20 @@ h3, .h3 {
 /* Other typographical elements */
 
 pre, code, kbd, samp {
-    font: .9473em/1.5 'andale mono', 'lucida console', monospace;
+    font: .9473em/1.5 'Courier New', monospace;
+     -moz-osx-font-smoothing: auto;
 }
 
 pre {
     background-color: #333333;
-    border-radius: 2px;
+    border-radius: 3px;
     box-shadow: 0 0 15px rgba(0, 0, 0, .25) inset;
     color: #fff;
     overflow: auto;
     padding: 1em;
     white-space: pre;
     word-wrap: normal;
-    margin-bottom: 2em;
+    margin-bottom: 1.8em;
 }
 
 dfn {
