--- a/css/style.css
+++ b/css/style.css
@@ -1055,6 +1055,51 @@ p {
    
    ========================================================================== */
 
+  /* Nav trigger */
+   
+.nav-trigger {
+  position: absolute;
+  top: 13px;
+  right: 0;
+  display: inline-block;
+  cursor: pointer;
+}
+@media (min-width: 600px) {
+  .nav-trigger {
+    display: none;
+  }
+}
+
+.nav-trigger > span {
+  display: block;
+  width: 35px;
+  height: 4px;
+  margin-bottom: 5px;
+  background: #c6870a;
+  border-radius: 2px;
+  transition: all 0.25s ease-out;
+}
+
+.nav-trigger.is-active > .hamburger-middle {
+  display: none;
+}
+
+.nav-trigger.is-active > .hamburger-top {
+  -moz-transform: translateY(9px) rotate(-45deg);
+  -o-transform: translateY(9px) rotate(-45deg);
+  -ms-transform: translateY(9px) rotate(-45deg);
+  -webkit-transform: translateY(9px) rotate(-45deg);
+  transform: translateY(9px) rotate(-45deg);
+}
+
+.nav-trigger.is-active > .hamburger-bottom {
+  -moz-transform: rotate(45deg);
+  -o-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  -webkit-transform: rotate(45deg);
+  transform: rotate(45deg);
+}
+
 .site-head {
 	margin-top: .8em;
 	margin-bottom: 3em;
@@ -1178,29 +1223,6 @@ p {
 	.nav-primary {
 		font-size: .7777em;
 	}
-}
-
-.nav-trigger {
-	position: absolute;
-	top: .9em;
-	right: 0;
-	cursor: pointer;
-	background-image: url("../img/icons/navicon-primary.gif");
-	background-repeat: no-repeat;
-	background-position: right 1px;
-	padding-right: 1.5em;
-	line-height: 1;
-	height: 1.5em;
-}
-
-@media (min-width: 600px) {
-	.nav-trigger {
-		display: none;
-	}
-}
-
-.nav-trigger-active {
-	background-image: url("../img/icons/navicon-primary-close.gif");
 }
 
 .nav-list {
